crates/salti/src/ui/panes/snapshots/salti__ui__panes__consensus__tests__basic.snap
---
source: salti/src/ui/panes/consensus.rs
expression: "consensus_text(&[CAT, CAT], |state| { state.set_reference(Some(0)); Ok(()) })"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│CATCATCATCATCATCAT                                                             │
│Consensus Sequence│CATCATCATCATCATCAT                                                             │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
