crates/salti/src/ui/panes/snapshots/salti__ui__panes__consensus__tests__no_reference.snap
---
source: salti/src/ui/panes/consensus.rs
expression: "consensus_text(&[CAT, CAT], |_| Ok(()))"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│No reference selected.                                                         │
│Consensus Sequence│CATCATCATCATCATCAT                                                             │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
